feat(linux): Establish Docker build environment and rollback java.lang.IO for compatibility